--- a/CodigoFInal.ipynb
+++ b/CodigoFInal.ipynb
@@ -116,7 +116,7 @@
     "        ret, frame = cap.read()\n",
     "        if ret == True:\n",
     "            frame = imutils.resize(frame, width=640)\n",
-    "            \n",
+    "            frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
     "            start_time = time()\n",
     "            results = score_frame(frame)\n",
     "            frame = plot_boxes(results, frame)\n",
