--- a/CodigoFInal.ipynb
+++ b/CodigoFInal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,10 @@
     "import cv2\n",
     "from time import time\n",
     "\n",
-    "\n",
+    "from tkinter import *\n",
+    "from PIL import Image\n",
+    "from PIL import ImageTk\n",
+    "import imutils\n",
     "\n",
     "\n",
     "def get_video_capture():\n",
@@ -51,6 +54,7 @@
     "    :param x: numeric label\n",
     "    :return: corresponding string label\n",
     "    \"\"\"\n",
+    "\n",
     "    return classes[int(x)]\n",
     "\n",
     "def plot_boxes(results, frame):\n",
@@ -70,7 +74,7 @@
     "            bgr = (0, 255, 0)\n",
     "            cv2.rectangle(frame, (x1, y1), (x2, y2), bgr, 2)\n",
     "            cv2.putText(frame, class_to_label(labels[i]), (x1, y1), cv2.FONT_HERSHEY_SIMPLEX, 0.9, bgr, 2)\n",
-    "\n",
+    "    \n",
     "    return frame\n",
     "\n",
     "def __call__():\n",
@@ -107,10 +111,16 @@
     "    cap.release()\n",
     "def iniciar():\n",
     "    global cap\n",
-    "    cap = cv2.VideoCapture(0, cv2.CAP_DSHOW)\n",
+    "    global contChaleco\n",
+    "    global contCasco\n",
+    "    contChaleco=0\n",
+    "    contCasco=0\n",
+    "    cap = cv2.VideoCapture(1, cv2.CAP_DSHOW)\n",
     "    visualizar()\n",
     "def visualizar():\n",
     "    global cap\n",
+    "    global contChaleco\n",
+    "    global contCasco\n",
     "    assert cap.isOpened()\n",
     "    if cap is not None:\n",
     "        ret, frame = cap.read()\n",
@@ -120,6 +130,7 @@
     "            start_time = time()\n",
     "            results = score_frame(frame)\n",
     "            frame = plot_boxes(results, frame)\n",
+    "\n",
     "            end_time = time()\n",
     "            fps = 1/np.round(end_time - start_time, 2)\n",
     "            #print(f\"Frames Per Second : {fps}\")\n",
@@ -129,7 +140,15 @@
     "            img = ImageTk.PhotoImage(image=im)\n",
     "            lblVideo.configure(image=img)\n",
     "            lblVideo.image = img\n",
-    "            lblVideo.after(10, visualizar)\n",
+    "            if class_to_label(results[0][0])=='chaleco':\n",
+    "                contChaleco+=1\n",
+    "            if class_to_label(results[0][1])=='casco':\n",
+    "                contCasco+=1\n",
+    "            if contChaleco>4 and contCasco>4:\n",
+    "                contChaleco=0\n",
+    "                contCasco=0\n",
+    "                print('si se pudo')\n",
+    "            lblVideo.after(1000, visualizar)\n",
     "        else:\n",
     "            lblVideo.image = \"\"\n",
     "            cap.release()\n",
@@ -142,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -177,20 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tkinter import *\n",
-    "from PIL import Image\n",
-    "from PIL import ImageTk\n",
-    "import cv2\n",
-    "import imutils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,9 +212,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "si se pudo\n",
+      "si se pudo\n",
+      "si se pudo\n",
+      "si se pudo\n",
+      "si se pudo\n",
+      "si se pudo\n",
+      "si se pudo\n",
+      "si se pudo\n",
+      "si se pudo\n"
+     ]
+    }
+   ],
    "source": [
     "root.mainloop()"
    ]
