--- a/CodigoFInal.ipynb
+++ b/CodigoFInal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,14 +140,22 @@
     "            img = ImageTk.PhotoImage(image=im)\n",
     "            lblVideo.configure(image=img)\n",
     "            lblVideo.image = img\n",
-    "            if class_to_label(results[0][0])=='chaleco':\n",
-    "                contChaleco+=1\n",
-    "            if class_to_label(results[0][1])=='casco':\n",
-    "                contCasco+=1\n",
+    "            if len(results[0])==2:\n",
+    "                if (class_to_label(results[0][0])=='chaleco' and class_to_label(results[0][1])=='casco') or (class_to_label(results[0][0])=='casco' and class_to_label(results[0][1])=='chaleco'):\n",
+    "                    contChaleco+=1\n",
+    "                    contCasco+=1\n",
     "            if contChaleco>4 and contCasco>4:\n",
     "                contChaleco=0\n",
     "                contCasco=0\n",
     "                print('si se pudo')\n",
+    "                image = ImageTk.PhotoImage(file = \"circulo.jpg\")\n",
+    "                imageLabel.configure(image = image)\n",
+    "                imageLabel.image = image\n",
+    "            else:\n",
+    "                image = ImageTk.PhotoImage(file = \"X_mark.svg.png\")\n",
+    "                imageLabel.configure(image = image)\n",
+    "                imageLabel.image = image\n",
+    "\n",
     "            lblVideo.after(1000, visualizar)\n",
     "        else:\n",
     "            lblVideo.image = \"\"\n",
@@ -161,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +177,7 @@
      "output_type": "stream",
      "text": [
       "Downloading: \"https://github.com/ultralytics/yolov5/archive/master.zip\" to C:\\Users\\diego/.cache\\torch\\hub\\master.zip\n",
-      "YOLOv5  2022-6-25 Python-3.10.3 torch-1.11.0+cpu CPU\n",
+      "YOLOv5  2022-6-26 Python-3.10.3 torch-1.11.0+cpu CPU\n",
       "\n",
       "Fusing layers... \n",
       "Model summary: 213 layers, 7015519 parameters, 0 gradients\n",
@@ -196,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,25 +215,20 @@
     "btnFinalizar = Button(root, text=\"Finalizar\", width=45, command=finalizar)\n",
     "btnFinalizar.grid(column=1, row=0, padx=5, pady=5)\n",
     "lblVideo = Label(root)\n",
-    "lblVideo.grid(column=0, row=1, columnspan=2)"
+    "lblVideo.grid(column=0, row=1, columnspan=2)\n",
+    "imageLabel =Label(root)\n",
+    "imageLabel.grid(column=2, row=1, columnspan=2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "si se pudo\n",
-      "si se pudo\n",
-      "si se pudo\n",
-      "si se pudo\n",
-      "si se pudo\n",
-      "si se pudo\n",
-      "si se pudo\n",
       "si se pudo\n",
       "si se pudo\n"
      ]
