--- a/CodigoFInal.ipynb
+++ b/CodigoFInal.ipynb
@@ -2,7 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "Log= pd.read_excel('Log.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +35,11 @@
     "from PIL import ImageTk\n",
     "import imutils\n",
     "\n",
-    "\n",
+    "def SaveLog(imagen):\n",
+    "    Log= pd.read_excel('Log.xlsx')\n",
+    "    df2 = {'Fecha': str(datetime.datetime.now()), 'Imagen': imagen}\n",
+    "    Log = Log.append(df2, ignore_index = True)\n",
+    "    Log.to_excel('Log.xlsx',index=False)\n",
     "def get_video_capture():\n",
     "    \"\"\"\n",
     "    Creates a new video streaming object to extract video frame by frame to make prediction on.\n",
@@ -113,14 +136,17 @@
     "    global cap\n",
     "    global contChaleco\n",
     "    global contCasco\n",
+    "    global cont\n",
     "    contChaleco=0\n",
     "    contCasco=0\n",
     "    cap = cv2.VideoCapture(1, cv2.CAP_DSHOW)\n",
+    "    cont=len(Log)\n",
     "    visualizar()\n",
     "def visualizar():\n",
     "    global cap\n",
     "    global contChaleco\n",
     "    global contCasco\n",
+    "    global cont\n",
     "    assert cap.isOpened()\n",
     "    if cap is not None:\n",
     "        ret, frame = cap.read()\n",
@@ -148,11 +174,14 @@
     "                contChaleco=0\n",
     "                contCasco=0\n",
     "                print('si se pudo')\n",
-    "                image = ImageTk.PhotoImage(file = \"circulo.jpg\")\n",
+    "                image = ImageTk.PhotoImage(file = \"Cheque.png\")\n",
     "                imageLabel.configure(image = image)\n",
     "                imageLabel.image = image\n",
+    "                cont+=1\n",
+    "                cv2.imwrite('empleado'+str(cont)+'.png',frame)\n",
+    "                SaveLog('empleado'+str(cont)+'.png')\n",
     "            else:\n",
-    "                image = ImageTk.PhotoImage(file = \"X_mark.svg.png\")\n",
+    "                image = ImageTk.PhotoImage(file = \"cerrar.png\")\n",
     "                imageLabel.configure(image = image)\n",
     "                imageLabel.image = image\n",
     "\n",
@@ -169,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,15 +251,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "si se pudo\n",
       "si se pudo\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_26712\\595297008.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  Log = Log.append(df2, ignore_index = True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "si se pudo\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_26712\\595297008.py:12: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype=datetime64[ns])\n",
+      "  Log= pd.read_excel('Log.xlsx')\n",
+      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_26712\\595297008.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  Log = Log.append(df2, ignore_index = True)\n"
      ]
     }
    ],
