--- a/CodigoFInal.ipynb
+++ b/CodigoFInal.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_18796\\2555539558.py:2: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype=datetime64[ns])\n",
+      "  Log= pd.read_excel('Log.xlsx')\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "Log= pd.read_excel('Log.xlsx')"
@@ -12,16 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime"
+    "import datetime\n",
+    "from time import sleep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,6 +157,7 @@
     "    global contChaleco\n",
     "    global contCasco\n",
     "    global cont\n",
+    "    aprobado=False\n",
     "    assert cap.isOpened()\n",
     "    if cap is not None:\n",
     "        ret, frame = cap.read()\n",
@@ -178,13 +189,16 @@
     "                imageLabel.configure(image = image)\n",
     "                imageLabel.image = image\n",
     "                cont+=1\n",
-    "                cv2.imwrite('empleado'+str(cont)+'.png',frame)\n",
-    "                SaveLog('empleado'+str(cont)+'.png')\n",
+    "                cv2.imwrite('RegistroFotos/'+'empleado'+str(cont)+'.png',frame)\n",
+    "                SaveLog('RegistroFotos/'+'empleado'+str(cont)+'.png')\n",
+    "                aprobado=True\n",
+    "                \n",
     "            else:\n",
     "                image = ImageTk.PhotoImage(file = \"cerrar.png\")\n",
     "                imageLabel.configure(image = image)\n",
     "                imageLabel.image = image\n",
-    "\n",
+    "            if aprobado:\n",
+    "                aprobado=False\n",
     "            lblVideo.after(1000, visualizar)\n",
     "        else:\n",
     "            lblVideo.image = \"\"\n",
@@ -198,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +220,7 @@
      "output_type": "stream",
      "text": [
       "Downloading: \"https://github.com/ultralytics/yolov5/archive/master.zip\" to C:\\Users\\diego/.cache\\torch\\hub\\master.zip\n",
-      "YOLOv5  2022-6-26 Python-3.10.3 torch-1.11.0+cpu CPU\n",
+      "YOLOv5  2022-6-27 Python-3.10.3 torch-1.11.0+cpu CPU\n",
       "\n",
       "Fusing layers... \n",
       "Model summary: 213 layers, 7015519 parameters, 0 gradients\n",
@@ -233,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +279,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_26712\\595297008.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_18796\\3402231599.py:12: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype=datetime64[ns])\n",
+      "  Log= pd.read_excel('Log.xlsx')\n",
+      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_18796\\3402231599.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  Log = Log.append(df2, ignore_index = True)\n"
      ]
     },
@@ -280,9 +296,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_26712\\595297008.py:12: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype=datetime64[ns])\n",
+      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_18796\\3402231599.py:12: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype=datetime64[ns])\n",
       "  Log= pd.read_excel('Log.xlsx')\n",
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_26712\\595297008.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_18796\\3402231599.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  Log = Log.append(df2, ignore_index = True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "si se pudo\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_18796\\3402231599.py:12: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype=datetime64[ns])\n",
+      "  Log= pd.read_excel('Log.xlsx')\n",
+      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_18796\\3402231599.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  Log = Log.append(df2, ignore_index = True)\n"
      ]
     }
