--- a/CodigoFInal.ipynb
+++ b/CodigoFInal.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_18796\\2555539558.py:2: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype=datetime64[ns])\n",
-      "  Log= pd.read_excel('Log.xlsx')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "Log= pd.read_excel('Log.xlsx')"
@@ -33,7 +24,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Jorge\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -219,8 +219,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: \"https://github.com/ultralytics/yolov5/archive/master.zip\" to C:\\Users\\diego/.cache\\torch\\hub\\master.zip\n",
-      "YOLOv5  2022-6-27 Python-3.10.3 torch-1.11.0+cpu CPU\n",
+      "Downloading: \"https://github.com/ultralytics/yolov5/zipball/master\" to C:\\Users\\Jorge/.cache\\torch\\hub\\master.zip\n",
+      "YOLOv5  2022-11-13 Python-3.10.8 torch-1.13.0+cpu CPU\n",
       "\n",
       "Fusing layers... \n",
       "Model summary: 213 layers, 7015519 parameters, 0 gradients\n",
@@ -267,59 +267,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "si se pudo\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_18796\\3402231599.py:12: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype=datetime64[ns])\n",
-      "  Log= pd.read_excel('Log.xlsx')\n",
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_18796\\3402231599.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  Log = Log.append(df2, ignore_index = True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "si se pudo\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_18796\\3402231599.py:12: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype=datetime64[ns])\n",
-      "  Log= pd.read_excel('Log.xlsx')\n",
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_18796\\3402231599.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  Log = Log.append(df2, ignore_index = True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "si se pudo\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_18796\\3402231599.py:12: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype=datetime64[ns])\n",
-      "  Log= pd.read_excel('Log.xlsx')\n",
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_18796\\3402231599.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  Log = Log.append(df2, ignore_index = True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "root.mainloop()"
    ]
@@ -327,7 +275,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.3 64-bit",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -341,12 +289,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
+    "hash": "04c99251120b9783bb57db04925b02d6d9a65330f6ca271b364357389b908c1b"
    }
   }
  },
