--- a/CodigoFInal.ipynb
+++ b/CodigoFInal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Jorge\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -149,7 +140,7 @@
     "    global cont\n",
     "    contChaleco=0\n",
     "    contCasco=0\n",
-    "    cap = cv2.VideoCapture(1, cv2.CAP_DSHOW)\n",
+    "    cap = cv2.VideoCapture(0, cv2.CAP_DSHOW) # 0 = WebCam\n",
     "    cont=len(Log)\n",
     "    visualizar()\n",
     "def visualizar():\n",
@@ -185,7 +176,7 @@
     "                contChaleco=0\n",
     "                contCasco=0\n",
     "                print('si se pudo')\n",
-    "                image = ImageTk.PhotoImage(file = \"Cheque.png\")\n",
+    "                image = ImageTk.PhotoImage(file = \"Images\\Cheque.png\")\n",
     "                imageLabel.configure(image = image)\n",
     "                imageLabel.image = image\n",
     "                cont+=1\n",
@@ -194,7 +185,7 @@
     "                aprobado=True\n",
     "                \n",
     "            else:\n",
-    "                image = ImageTk.PhotoImage(file = \"cerrar.png\")\n",
+    "                image = ImageTk.PhotoImage(file = \"Images\\cerrar.png\")\n",
     "                imageLabel.configure(image = image)\n",
     "                imageLabel.image = image\n",
     "            if aprobado:\n",
@@ -212,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
