--- a/CodigoFInal.ipynb
+++ b/CodigoFInal.ipynb
@@ -1,60 +1,49 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Importamos las librerias"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import datetime\n",
-    "import torch\n",
-    "import numpy as np\n",
-    "import cv2\n",
-    "from time import time\n",
-    "from tkinter import *\n",
-    "from PIL import Image\n",
-    "from PIL import ImageTk\n",
-    "import imutils\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Importar excel donde se guarda los registros"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "Log= pd.read_excel('Log.xlsx')"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Librerias"
+    "import datetime\n",
+    "from time import sleep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Jorge\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "from time import time\n",
     "\n",
+    "from tkinter import *\n",
+    "from PIL import Image\n",
+    "from PIL import ImageTk\n",
+    "import imutils\n",
     "\n",
     "def SaveLog(imagen):\n",
     "    Log= pd.read_excel('Log.xlsx')\n",
@@ -160,7 +149,7 @@
     "    global cont\n",
     "    contChaleco=0\n",
     "    contCasco=0\n",
-    "    cap = cv2.VideoCapture(0, cv2.CAP_DSHOW)\n",
+    "    cap = cv2.VideoCapture(1, cv2.CAP_DSHOW)\n",
     "    cont=len(Log)\n",
     "    visualizar()\n",
     "def visualizar():\n",
@@ -196,7 +185,7 @@
     "                contChaleco=0\n",
     "                contCasco=0\n",
     "                print('si se pudo')\n",
-    "                image = ImageTk.PhotoImage(file = \"Images/Cheque.png\")\n",
+    "                image = ImageTk.PhotoImage(file = \"Cheque.png\")\n",
     "                imageLabel.configure(image = image)\n",
     "                imageLabel.image = image\n",
     "                cont+=1\n",
@@ -205,7 +194,7 @@
     "                aprobado=True\n",
     "                \n",
     "            else:\n",
-    "                image = ImageTk.PhotoImage(file = \"Images/cerrar.png\")\n",
+    "                image = ImageTk.PhotoImage(file = \"cerrar.png\")\n",
     "                imageLabel.configure(image = image)\n",
     "                imageLabel.image = image\n",
     "            if aprobado:\n",
@@ -223,15 +212,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: \"https://github.com/ultralytics/yolov5/archive/master.zip\" to C:\\Users\\diego/.cache\\torch\\hub\\master.zip\n",
-      "YOLOv5  2022-12-4 Python-3.10.5 torch-1.11.0+cpu CPU\n",
+      "Downloading: \"https://github.com/ultralytics/yolov5/zipball/master\" to C:\\Users\\Jorge/.cache\\torch\\hub\\master.zip\n",
+      "YOLOv5  2022-11-13 Python-3.10.8 torch-1.13.0+cpu CPU\n",
       "\n",
       "Fusing layers... \n",
       "Model summary: 213 layers, 7015519 parameters, 0 gradients\n",
@@ -258,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,59 +265,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "si se pudo\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_125756\\2932398452.py:4: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  Log = Log.append(df2, ignore_index = True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "si se pudo\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_125756\\2932398452.py:2: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype=datetime64[ns])\n",
-      "  Log= pd.read_excel('Log.xlsx')\n",
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_125756\\2932398452.py:4: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  Log = Log.append(df2, ignore_index = True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "si se pudo\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_125756\\2932398452.py:2: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype=datetime64[ns])\n",
-      "  Log= pd.read_excel('Log.xlsx')\n",
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_125756\\2932398452.py:4: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  Log = Log.append(df2, ignore_index = True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "root.mainloop()"
    ]
@@ -336,7 +275,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -350,12 +289,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
+    "hash": "04c99251120b9783bb57db04925b02d6d9a65330f6ca271b364357389b908c1b"
    }
   }
  },
