--- a/CodigoFInal.ipynb
+++ b/CodigoFInal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,15 +195,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: \"https://github.com/ultralytics/yolov5/zipball/master\" to C:\\Users\\Jorge/.cache\\torch\\hub\\master.zip\n",
-      "YOLOv5  2022-11-13 Python-3.10.8 torch-1.13.0+cpu CPU\n",
+      "Downloading: \"https://github.com/ultralytics/yolov5/zipball/master\" to C:\\Users\\diego/.cache\\torch\\hub\\master.zip\n",
+      "\u001b[31m\u001b[1mrequirements:\u001b[0m YOLOv5 requirement \"gitpython>=3.1.30\" not found, attempting AutoUpdate...\n",
+      "Collecting gitpython>=3.1.30\n",
+      "  Downloading GitPython-3.1.31-py3-none-any.whl (184 kB)\n",
+      "     -------------------------------------- 184.3/184.3 kB 2.8 MB/s eta 0:00:00\n",
+      "Collecting gitdb<5,>=4.0.1\n",
+      "  Using cached gitdb-4.0.10-py3-none-any.whl (62 kB)\n",
+      "Collecting smmap<6,>=3.0.1\n",
+      "  Using cached smmap-5.0.0-py3-none-any.whl (24 kB)\n",
+      "Installing collected packages: smmap, gitdb, gitpython\n",
+      "Successfully installed gitdb-4.0.10 gitpython-3.1.31 smmap-5.0.0\n",
+      "\n",
+      "\u001b[31m\u001b[1mrequirements:\u001b[0m 1 package updated per C:\\Users\\diego\\.cache\\torch\\hub\\ultralytics_yolov5_master\\requirements.txt\n",
+      "\u001b[31m\u001b[1mrequirements:\u001b[0m  \u001b[1mRestart runtime or rerun command for updates to take effect\u001b[0m\n",
+      "\n",
+      "YOLOv5  2023-3-9 Python-3.9.16 torch-1.13.1+cpu CPU\n",
       "\n",
       "Fusing layers... \n",
       "Model summary: 213 layers, 7015519 parameters, 0 gradients\n",
@@ -230,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,9 +262,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "si se pudo\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_10864\\396554886.py:4: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  Log = Log.append(df2, ignore_index = True)\n",
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\diego\\.conda\\envs\\Ropa\\lib\\tkinter\\__init__.py\", line 1892, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"c:\\Users\\diego\\.conda\\envs\\Ropa\\lib\\tkinter\\__init__.py\", line 814, in callit\n",
+      "    func(*args)\n",
+      "  File \"C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_10864\\396554886.py\", line 114, in visualizar\n",
+      "    assert cap.isOpened()\n",
+      "AssertionError\n"
+     ]
+    }
+   ],
    "source": [
     "root.mainloop()"
    ]
@@ -272,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
